--- a/public/admin.html
+++ b/public/admin.html
@@ -5,6 +5,19 @@
   <title>Yodlr Admin Page</title>
 </head>
 <body>
-  List user data here
+  <div id="users-list" style="background-color: rgb(255, 182, 193); border: 4px solid rgb(235, 148, 160);"> 
+    <div id="UserCard-1" data-id="1">
+      <div>{{Email}}</div>
+      <div>first-name last-name</div>
+      <button class="btn">Pending</button> 
+    </div> 
+  </div>
+  <div id="users-list" style="background-color: lightgreen;">
+    <div id="UserCard-1" data-id="1">
+      <div>{{Email}}</div>
+      <div>first-name last-name</div>
+      <button class="btn">Active</button>
+    </div>
+  </div>
 </body>
 </html>
