--- a/public/admin.html
+++ b/public/admin.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset=utf-8>
   <title>Yodlr Admin Page</title>
+  <link rel="stylesheet" href="/css/users-list.css" />
 </head>
 <body>
-  <div id="users-list" style="background-color: rgb(255, 182, 193); border: 4px solid rgb(235, 148, 160);"> 
-    <div id="UserCard-1" data-id="1">
+  <div id="users-list" > 
+    <!-- <div id="UserCard-1" data-id="1" style="background-color: rgb(255, 182, 193); border: 4px solid rgb(235, 148, 160);">
       <div>{{Email}}</div>
       <div>first-name last-name</div>
       <button class="btn">Pending</button> 
     </div> 
-  </div>
-  <div id="users-list" style="background-color: lightgreen;">
-    <div id="UserCard-1" data-id="1">
+    <div id="UserCard-1" data-id="12" style="background-color: lightgreen;">
       <div>{{Email}}</div>
       <div>first-name last-name</div>
       <button class="btn">Active</button>
-    </div>
+    </div> -->
   </div>
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="/js/UserApi.js"></script>
+  <script src="/js/admin.js"></script>
 </body>
 </html>
