--- a/public/admin.html
+++ b/public/admin.html
@@ -6,12 +6,16 @@
   <link rel="stylesheet" href="/css/users-list.css" />
 </head>
 <body>
-  <div id="users-list" > 
+
+  <div id="pending-users-list">
     <!-- <div id="UserCard-1" data-id="1" style="background-color: rgb(255, 182, 193); border: 4px solid rgb(235, 148, 160);">
       <div>{{Email}}</div>
       <div>first-name last-name</div>
-      <button class="btn">Pending</button> 
-    </div> 
+      <button class="btn">Pending</button>
+    </div> -->
+  </div>
+  <div id="active-users-list" > 
+    <!-- 
     <div id="UserCard-1" data-id="12" style="background-color: lightgreen;">
       <div>{{Email}}</div>
       <div>first-name last-name</div>
