--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,9 @@
   <meta charset=utf-8>
   <title>Yodlr Admin Page</title>
   <link rel="stylesheet" href="/css/users-list.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
 </head>
 <body>
   <div id="user-container">
