--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset=utf-8>
   <title>Yodlr Design Challenge</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+  integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="/css/index.css" />
+
 </head>
 <body>
-  <h1>Yodlr Design Challenge</h1>
-  <p>
-    <a href="/signup.html">Registration Page</a><br/>
-    <a href="/admin.html">Admin Page</a>
-  </p>
+  <div class="container">
+    <h1> >>==WorkBreeze ==></h1>
+    <h2>A Yodlr Design Challenge</h2>
+    <div class="row">
+      <a href="/signup.html" class="btn btn-success mb-3 p-2 col-12">Signup!</a>
+      <a href="/admin.html" class="btn btn-secondary mb-3 p-2 col-12">Admins Only</a>
+    </div>
+</div>
 </body>
 </html>
